--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "xml-fly",
   "version": "0.0.0",
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "electron": "ng build --base-href ./ && electron .",
+    "package:win": "electron-packager . --overwrite --platform=win32 --arch=ia32 --out=out"
   },
   "private": true,
   "dependencies": {
@@ -33,10 +36,12 @@
     "@angular/cli": "~7.2.1",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~10.12.18",
     "@types/jasmine": "~3.3.5",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~10.12.18",
     "codelyzer": "~4.5.0",
+    "electron": "^4.0.1",
+    "electron-packager": "^13.0.1",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
