--- a/package.json
+++ b/package.json
@@ -14,44 +14,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.0.1",
-    "bootstrap": "^4.2.1",
-    "core-js": "^2.6.2",
+    "@angular/animations": "~7.2.7",
+    "@angular/common": "~7.2.7",
+    "@angular/compiler": "~7.2.7",
+    "@angular/core": "~7.2.7",
+    "@angular/forms": "~7.2.7",
+    "@angular/platform-browser": "~7.2.7",
+    "@angular/platform-browser-dynamic": "~7.2.7",
+    "@angular/router": "~7.2.7",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.4",
+    "angular2-hotkeys": "^2.1.4",
+    "bootstrap": "^4.3.1",
+    "core-js": "^2.6.5",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.6",
-    "rxjs": "~6.3.3",
+    "popper.js": "^1.14.7",
+    "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.12.1",
-    "@angular/cli": "~7.2.1",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
-    "@types/jasmine": "~3.3.5",
+    "@angular-devkit/build-angular": "~0.13.3",
+    "@angular/cli": "~7.3.3",
+    "@angular/compiler-cli": "~7.2.7",
+    "@angular/language-service": "~7.2.7",
+    "@types/jasmine": "~3.3.9",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~10.12.18",
+    "@types/node": "~11.9.6",
     "codelyzer": "~4.5.0",
-    "electron": "^4.0.1",
-    "electron-packager": "^13.0.1",
+    "electron": "^4.0.6",
+    "electron-packager": "^13.1.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
+    "karma": "~4.0.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "~2.0.5",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.12.0",
-    "typescript": "~3.2.2"
+    "ts-node": "~8.0.2",
+    "tslint": "~5.13.0",
+    "typescript": "^3.1.6"
   }
 }
