--- a/package.json
+++ b/package.json
@@ -14,33 +14,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.7",
-    "@angular/common": "~7.2.7",
-    "@angular/compiler": "~7.2.7",
-    "@angular/core": "~7.2.7",
-    "@angular/forms": "~7.2.7",
-    "@angular/platform-browser": "~7.2.7",
-    "@angular/platform-browser-dynamic": "~7.2.7",
-    "@angular/router": "~7.2.7",
+    "@angular/animations": "~8.1.3",
+    "@angular/common": "~8.1.3",
+    "@angular/compiler": "~8.1.3",
+    "@angular/core": "~8.1.3",
+    "@angular/forms": "~8.1.3",
+    "@angular/platform-browser": "~8.1.3",
+    "@angular/platform-browser-dynamic": "~8.1.3",
+    "@angular/router": "~8.1.3",
     "@ng-bootstrap/ng-bootstrap": "^4.0.4",
     "angular2-hotkeys": "^2.1.4",
     "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "popper.js": "^1.14.7",
-    "rxjs": "~6.4.0",
+    "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.29"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.3",
-    "@angular/cli": "~7.3.3",
-    "@angular/compiler-cli": "~7.2.7",
-    "@angular/language-service": "~7.2.7",
+    "@angular-devkit/build-angular": "~0.801.3",
+    "@angular/cli": "~8.1.3",
+    "@angular/compiler-cli": "~8.1.3",
+    "@angular/language-service": "~8.1.3",
     "@types/jasmine": "~3.3.9",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~11.9.6",
-    "codelyzer": "~4.5.0",
+    "codelyzer": "^5.0.1",
     "electron": "^4.0.6",
     "electron-packager": "^13.1.0",
     "jasmine-core": "~3.3.0",
@@ -53,6 +53,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~8.0.2",
     "tslint": "~5.13.0",
-    "typescript": "^3.1.6"
+    "typescript": "3.4.5"
   }
 }
