--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "electron": "ng build --prod && electron .",
-    "package:win": "ng build --base-href ./ && electron-packager . --overwrite --platform=win32 --arch=ia32 --out=out"
+    "package:win": "ng build --prod --base-href ./ && electron-packager . --overwrite --platform=win32 --arch=ia32 --out=out"
   },
   "private": true,
   "dependencies": {
