--- a/package.json
+++ b/package.json
@@ -14,33 +14,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.3",
-    "@angular/common": "~8.1.3",
-    "@angular/compiler": "~8.1.3",
-    "@angular/core": "~8.1.3",
-    "@angular/forms": "~8.1.3",
-    "@angular/platform-browser": "~8.1.3",
-    "@angular/platform-browser-dynamic": "~8.1.3",
-    "@angular/router": "~8.1.3",
-    "@ng-bootstrap/ng-bootstrap": "^4.0.4",
+    "@angular/animations": "~9.1.12",
+    "@angular/common": "~9.1.12",
+    "@angular/compiler": "~9.1.12",
+    "@angular/core": "~9.1.12",
+    "@angular/forms": "~9.1.12",
+    "@angular/localize": "^9.1.12",
+    "@angular/platform-browser": "~9.1.12",
+    "@angular/platform-browser-dynamic": "~9.1.12",
+    "@angular/router": "~9.1.12",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "angular2-hotkeys": "^2.1.4",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.0",
     "core-js": "^2.6.5",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "popper.js": "^1.14.7",
-    "rxjs": "~6.5.2",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "rxjs": "~6.6.0",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.3",
-    "@angular/cli": "~8.1.3",
-    "@angular/compiler-cli": "~8.1.3",
-    "@angular/language-service": "~8.1.3",
+    "@angular-devkit/build-angular": "~0.901.11",
+    "@angular/cli": "~9.1.11",
+    "@angular/compiler-cli": "~9.1.12",
+    "@angular/language-service": "~9.1.12",
     "@types/jasmine": "~3.3.9",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~11.9.6",
-    "codelyzer": "^5.0.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "electron": "^6.0.0",
     "electron-packager": "^13.1.0",
     "jasmine-core": "~3.3.0",
@@ -53,6 +54,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~8.0.2",
     "tslint": "~5.13.0",
-    "typescript": "3.4.5"
+    "typescript": "3.8.3"
   }
 }
