--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "@angular/platform-browser-dynamic": "~9.1.12",
     "@angular/router": "~9.1.12",
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
-    "angular2-hotkeys": "^2.1.4",
+    "angular2-hotkeys": "^2.2.0",
     "bootstrap": "^4.4.0",
-    "core-js": "^2.6.5",
+    "core-js": "^2.6.11",
     "jquery": "^3.5.1",
-    "popper.js": "^1.14.7",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -38,22 +38,22 @@
     "@angular/cli": "~9.1.11",
     "@angular/compiler-cli": "~9.1.12",
     "@angular/language-service": "~9.1.12",
-    "@types/jasmine": "~3.3.9",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "^3.3.16",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
-    "electron": "^6.0.0",
-    "electron-packager": "^13.1.0",
+    "electron": "^6.1.12",
+    "electron-packager": "^13.1.1",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.1",
+    "karma": "^5.1.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.5",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~8.0.2",
-    "tslint": "~5.13.0",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^7.0.0",
+    "ts-node": "^8.0.3",
+    "tslint": "^5.13.1",
     "typescript": "3.8.3"
   }
 }
