feat: move action toolbar, use bootstrap icons (#15)

--- a/angular.json
+++ b/angular.json
@@ -21,7 +21,12 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*.svg",
+                "input": "node_modules/bootstrap-icons",
+                "output": "assets/icons/"
+              }
             ],
             "styles": [
               "src/styles.css",
