--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "angular2-hotkeys": "^2.2.0",
     "bootstrap": "^4.4.0",
+    "bootstrap-icons": "^1.0.0-alpha5",
     "core-js": "^2.6.11",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
