--- a/package.json
+++ b/package.json
@@ -1,31 +1,28 @@
 {
   "name": "xml-fly",
   "version": "0.0.0",
-  "main": "main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "electron": "ng build --prod && electron .",
-    "package:win": "ng build --prod --base-href ./ && electron-packager . --overwrite --platform=win32 --arch=ia32 --out=out"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.4",
-    "@angular/common": "~10.0.4",
-    "@angular/compiler": "~10.0.4",
-    "@angular/core": "~10.0.4",
-    "@angular/forms": "~10.0.4",
-    "@angular/localize": "^10.0.4",
-    "@angular/platform-browser": "~10.0.4",
-    "@angular/platform-browser-dynamic": "~10.0.4",
-    "@angular/router": "~10.0.4",
-    "@ng-bootstrap/ng-bootstrap": "^6.0.0",
+    "@angular/animations": "^10.0.6",
+    "@angular/common": "^10.0.6",
+    "@angular/compiler": "^10.0.6",
+    "@angular/core": "^10.0.6",
+    "@angular/forms": "^10.0.6",
+    "@angular/localize": "^10.0.6",
+    "@angular/platform-browser": "^10.0.6",
+    "@angular/platform-browser-dynamic": "^10.0.6",
+    "@angular/router": "^10.0.6",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "angular2-hotkeys": "^2.2.0",
-    "bootstrap": "^4.4.0",
+    "bootstrap": "^4.5.0",
     "bootstrap-icons": "^1.0.0-alpha5",
     "core-js": "^2.6.11",
     "jquery": "^3.5.1",
@@ -35,16 +32,14 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.3",
-    "@angular/cli": "~10.0.3",
-    "@angular/compiler-cli": "~10.0.4",
-    "@angular/language-service": "~10.0.4",
-    "@types/jasmine": "^3.3.16",
+    "@angular-devkit/build-angular": "^0.1000.4",
+    "@angular/cli": "^10.0.4",
+    "@angular/compiler-cli": "^10.0.6",
+    "@angular/language-service": "^10.0.6",
+    "@types/jasmine": "^3.5.11",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.53",
     "codelyzer": "^6.0.0",
-    "electron": "^9.1.0",
-    "electron-packager": "^13.1.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -53,7 +48,7 @@
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
-    "ts-node": "^8.0.3",
+    "ts-node": "^8.10.2",
     "tslint": "~6.1.0",
     "typescript": "3.9.7"
   }
