--- a/package.json
+++ b/package.json
@@ -11,34 +11,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.6",
-    "@angular/common": "^10.0.6",
-    "@angular/compiler": "^10.0.6",
-    "@angular/core": "^10.0.6",
-    "@angular/forms": "^10.0.6",
-    "@angular/localize": "^10.0.6",
-    "@angular/platform-browser": "^10.0.6",
-    "@angular/platform-browser-dynamic": "^10.0.6",
-    "@angular/router": "^10.0.6",
+    "@angular/animations": "^10.0.11",
+    "@angular/common": "^10.0.11",
+    "@angular/compiler": "^10.0.11",
+    "@angular/core": "^10.0.11",
+    "@angular/forms": "^10.0.11",
+    "@angular/localize": "^10.0.11",
+    "@angular/platform-browser": "^10.0.11",
+    "@angular/platform-browser-dynamic": "^10.0.11",
+    "@angular/router": "^10.0.11",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "angular2-hotkeys": "^2.2.0",
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.5.2",
     "bootstrap-icons": "^1.0.0-alpha5",
     "core-js": "^2.6.11",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "rxjs": "^6.6.2",
+    "tslib": "^2.0.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.4",
-    "@angular/cli": "^10.0.4",
-    "@angular/compiler-cli": "^10.0.6",
-    "@angular/language-service": "^10.0.6",
-    "@types/jasmine": "^3.5.11",
+    "@angular-devkit/build-angular": "^0.1000.7",
+    "@angular/cli": "^10.0.7",
+    "@angular/compiler-cli": "^10.0.11",
+    "@angular/language-service": "^10.0.11",
+    "@types/jasmine": "^3.5.13",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.12.53",
+    "@types/node": "^12.12.54",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -49,7 +49,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "^8.10.2",
-    "tslint": "~6.1.0",
+    "tslint": "^6.1.3",
     "typescript": "3.9.7"
   }
 }
