--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "bootstrap-icons": "^1.0.0-alpha5",
     "core-js": "^2.6.11",
     "jquery": "^3.5.1",
+    "json-url": "^2.6.0",
     "popper.js": "^1.16.1",
     "rxjs": "^6.6.2",
+    "stream": "0.0.2",
+    "timers": "^0.1.1",
     "tslib": "^2.0.1",
+    "xml2js": "^0.4.23",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
