--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@angular/platform-browser": "^10.0.11",
     "@angular/platform-browser-dynamic": "^10.0.11",
     "@angular/router": "^10.0.11",
+    "@fortawesome/angular-fontawesome": "^0.7.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "angular2-hotkeys": "^2.2.0",
     "bootstrap": "^4.5.2",
-    "bootstrap-icons": "^1.0.0-alpha5",
     "core-js": "^2.6.11",
     "jquery": "^3.5.1",
     "json-url": "^2.6.0",
