--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
-    "angular2-hotkeys": "^2.2.0",
+    "@types/mousetrap": "^1.6.3",
     "bootstrap": "^4.5.2",
     "core-js": "^2.6.11",
     "jquery": "^3.5.1",
     "json-url": "^2.6.0",
+    "mousetrap": "^1.6.5",
     "popper.js": "^1.16.1",
     "rxjs": "^6.6.3",
+    "scroll-into-view-if-needed": "^2.2.26",
     "stream": "0.0.2",
     "timers": "^0.1.1",
     "tslib": "^2.0.1",
